# useful_tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
math/: mandelbrot&co.py  primes.py  probability.py  tribonacci.py
maze/: maze.py  random_scale.py
misc/: inputs.py  misc.py
src/useful_tools/: exceptions.py  utils.py
src/useful_tools/compsci/: bit_ops.py  parsing.py  searches.py  sorts.py
src/useful_tools/math/: complex_decimal.py  improved_polynomial.py  linalg.py  mandelbrot&co.py  number_theory.py  polynomial.py  power_sums.py  primes.py  probability.py  tribonacci.py
src/useful_tools/math/Polynomials/: classes.py  number_types.py  specs.py  utils.py
src/useful_tools/maze/: maze.py
src/useful_tools/misc/: colors.py  data.py  egg.py  fubuki_stare.py  inputs.py  misc.py  type_hint_validator.py  umamusume.py  umamusume.txt  unicode_art.py
src/useful_tools/storage/egg/: viable_states.jsonl
tests/compsci/: test_bit_ops.py  test_searches.py
tests/math/: test_linalg.py  test_polynomial.py  test_primes.py
tests/misc/: test_misc.py
